--- a/jeos/virtualMachines.textile
+++ b/jeos/virtualMachines.textile
@@ -55,7 +55,7 @@ h4. Folders
 | NFS exports      | /OVS/downloads     | 450/500GB Free |
 | NFS mounts       | /mount/jpbox       | 100/917GB Free |
 
-h4. alm
+h4. alm.
 
 
 
