--- a/training/git.textile
+++ b/training/git.textile
@@ -400,6 +400,9 @@ bc.
 git commit -m"<commit_Message>"   # Command Format
 git commit -m"Removed testGetActivities from ServiceRequestTest"     # Command Example
 
+h2. See changes to a file
+
+bc. git log -p <path to file>
 h1(#gitOnWindows). Using Git on Windows
 
 * Install cygwin adding the 'git' & 'openssh' packages when it comes time to select packages
