--- a/training/java/java.textile
+++ b/training/java/java.textile
@@ -53,7 +53,7 @@ bc.
 <configuration>
   <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
     <layout class="ch.qos.logback.classic.PatternLayout">
-      <Pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</Pattern>
+      <Pattern>%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36}:%line - %msg%n</Pattern>
     </layout>
   </appender>
   <logger name="com.base22" level="TRACE"/>
