--- a/index.textile
+++ b/index.textile
@@ -19,6 +19,7 @@ Quick Links:
 !(icon)/images/file.gif! "Lisp":training/lisp.html
 !(icon)/images/file.gif! "Managed Beans":training/javaEE6/ManagedBeans.html
 !(icon)/images/file.gif! "Maven":/maven.html
+!(icon)/images/file.gif! "Python":/python.html
 !(icon)/images/file.gif! "OVM Manager & Template Builder":/jeos/OVM_Manager_TemplateBuilder.html
 !(icon)/images/file.gif! "Oracle VM Commands":/training/oracleVM.html
 !(icon)/images/file.gif! "Setting up an Oracle Virtual Machine Lab":jeos/SettingUpVirtualLab.html
